[gd_scene load_steps=6 format=3 uid="uid://cbsi34dtbelth"]

[ext_resource type="Script" path="res://Scripts/race_npc.gd" id="1_kdi6q"]
[ext_resource type="Script" path="res://addons/controller_icons/objects/ControllerIconTexture.gd" id="2_kw6d1"]

[sub_resource type="Texture2D" id="Texture2D_3mkvl"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_kw6d1")
path = "joypad/a"
show_mode = 0
force_type = 0

[sub_resource type="CircleShape2D" id="CircleShape2D_ogubi"]
radius = 200.0

[sub_resource type="Texture2D" id="Texture2D_oiv7i"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_kw6d1")
path = "interact"
show_mode = 0
force_type = 0

[node name="NPC" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_kdi6q")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = SubResource("Texture2D_3mkvl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_ogubi")

[node name="InteractPrompt" type="Sprite2D" parent="."]
position = Vector2(0, 75)
scale = Vector2(0.75, 0.75)
texture = SubResource("Texture2D_oiv7i")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
